<resources>
    <string name="app_name">JDID eKYC</string>
    <string name="please_register">กรุณาลงทะเบียนอุปกรณ์</string>
    <string name="device_id">รหัสอุปกรณ์</string>
    <string name="manager_name">ชื่อนามสกุล ผู้จัดการสาขา</string>
    <string name="branch_name">ชื่อสาขา</string>
    <string name="phone_number">เบอร์โทรศัพท์</string>
    <string name="email">อีเมล์</string>
    <string name="next_step">ขั้นตอนต่อไป</string>
    <string name="lock_screen_title_pf">Input requestVrifyPin code or use fingerprint</string>
    <string name="forgot_pf">Forgot?</string>
    <string name="next_pf">Next</string>
    <string name="assign_pin">กำหนด PIN Code จำนวน 6 หลัก</string>
    <string name="confirm_assign_pin">ยืนยัน PIN Code อีกครั้ง</string>
    <string name="input_pin">กรุณาระบุ PIN Code ให้ถูกต้อง</string>
    <string name="missing_confirm_pin">ยืนยัน PIN Code ไม่ถูกต้อง กรุณาลองอีกครั้ง</string>
    <string name="finish">เสร็จสิ้น</string>
    <string name="verify_person">ตรวจสอบบุคคล</string>
    <string name="dip_chip">Dip Chip</string>
    <string name="dip_chip_motorshow">Dip Chip mortorshow</string>
    <string name="register_ekyc">ลงทะเบียน eKYC</string>
    <string name="get_data_from_card">กรุณากดเพื่อข้อมูลจากบัตร</string>
    <string name="compare_success">สำเร็จ</string>
    <string name="compare_success_description">อัตลักษณ์ภาพถ่ายตรงกัน</string>
    <string name="compare_fail">ล้มเหลว</string>
    <string name="compare_fail_description">อัตลักษณ์ภาพถ่ายไม่ตรงกัน</string>
    <string name="try_again">ลองอีกครั้ง</string>
    <string name="kyc_title">ลงทะเบียน eKYC</string>
    <string name="company_name">ชื่อบริษัท</string>
    <string-array name="mariageStatusList">
        <item>โสด</item>
        <item>สมรส</item>
        <item>หย่า</item>
    </string-array>

    <string-array name="companyList">
        <item>กรุณาเลือก ชื่อบริษัท</item>
        <item>บริษัท เจ ฟินเทค จำกัด</item>
        <item>บริษัท เจ เวนเจอร์ส จำกัด</item>
        <item>บริษัท เจมาร์ท โมบาย จำกัด</item>
        <item>บริษัท เจพี ประกันภัย จำกัด (มหาชน)</item>
        <item>บริษัท เจเอเอส แอสเซ็ท จํากัด (มหาชน)</item>
        <item>บริษัท เจ เอ็ม ที เน็ตเวิร์ค เซอร์วิสเซ็ท จำกัด (มหาชน)</item>
        <item>บริษัท ซิงเกอร์ ประเทศไทย จำกัด</item>
        <item>บริษัท บีนส์แอนด์บราวน์ จำกัด</item>
    </string-array>

    <string-array name="purposeList">
        <item>ไม่ระบุ/อื่น</item>
        <item>Enjoycard</item>
        <item>ป๋า</item>
        <item>J-money</item>
        <item>ซิงเกอร์</item>
        <item>บีนส์แอนด์บราวน์</item>
    </string-array>
</resources>
