<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNextStep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edDeviceID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:fontFamily="@font/kanit"
                    android:inputType="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegisterDevice" />

                <Spinner
                    android:id="@+id/spCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:background="#E0DFDF"
                    android:fontFamily="@font/kanit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edDeviceID" />
                <!--                <EditText-->
                <!--                    android:id="@+id/edCompanyName"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    android:layout_gravity="bottom"-->
                <!--                    android:layout_marginStart="16dp"-->
                <!--                    android:layout_marginTop="15dp"-->
                <!--                    android:layout_marginEnd="16dp"-->
                <!--                    android:layout_weight="2"-->
                <!--                    android:ems="10"-->
                <!--                    android:fontFamily="@font/kanit"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/edDeviceID" />-->

                <EditText
                    android:id="@+id/edName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/kanit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spCompanyName" />

                <EditText
                    android:id="@+id/edBranch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/kanit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edName" />

                <EditText
                    android:id="@+id/edPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/kanit"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edBranch" />

                <EditText
                    android:id="@+id/edEMail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/kanit"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edPhone" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="243dp"
                    android:layout_height="91dp"
                    android:layout_marginTop="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/txtRegisterDevice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/jdid_ekyc" />

                <TextView
                    android:id="@+id/txtRegisterDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kanit"
                    android:text="@string/please_register"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/txtDeviceID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/device_id"
                    app:layout_constraintBottom_toTopOf="@+id/edDeviceID"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/company_name"
                    app:layout_constraintBottom_toTopOf="@+id/spCompanyName"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/manager_name"
                    app:layout_constraintBottom_toTopOf="@+id/edName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spCompanyName" />

                <TextView
                    android:id="@+id/txtBranch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/branch_name"
                    app:layout_constraintBottom_toTopOf="@+id/edBranch"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/phone_number"
                    app:layout_constraintBottom_toTopOf="@+id/edPhone"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txtEMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/kanit"
                    android:text="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/edEMail"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnNextStep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:fontFamily="@font/kanit"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>